--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
         }
     </style>
     <link rel="stylesheet" href="/styles/index.css">
+    <link rel="apple-touch-icon" href="/pwa-192x192.png">
+    <meta name="theme-color" content="#ffffff">
 </head>
 
 <body class="bg-background-light text-text-main h-screen overflow-hidden">
